@@ -1,3 +1,10 @@
+2008-04-11  Murray Cumming  <murrayc@murrayc.com>
+
+	* glom/application.cc fill_menu_tables(), fill_menu_reports():
+	Remove the ActionGroups before recreating them to avoid warnings, and 
+	presumably to avoid the changes from being ignored. Maybe GTK+ svn 
+	trunk has become less tolerant.
+
 1.6.14:
 
 2008-04-10  Murray Cumming  <murrayc@murrayc.com>
